--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -15,15 +15,10 @@
   <div class="progress-bar bg-info progress-test-passage" role="progressbar" style="width: 0%" aria-valuenow="<%= @test_passage.percent_success_answer %>" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 
-<% if @test_passage.test.time_for_test > 0 %>
+<% if @test_passage.test.set_countdown? %>
   <div class="h3 mb-4"> 
     <%= t('.time_left') %>
-    <div class="countdown" 
-      data-id="<%= @test_passage.id %>" 
-      data-time="<%= @test_passage.time_left %>"
-    >
-      <%= format_of_countdown(@test_passage.time_left) %>
-    </div>
+    <div class="countdown" data-time="<%= @test_passage.time_left %>"><%= format_of_countdown(@test_passage.time_left) %></div>
   </div>
 <% end %>
 
@@ -39,6 +34,6 @@
 
   <div class="mt-4">
     <%= link_to t('.gist_question'), gist_test_passage_path(@test_passage), method: :post, class: 'btn btn-outline-info mr-2', role: 'button' %>
-    <%= form.submit t('.button_next'), class: 'btn btn-outline-success' %>
+    <%= form.submit t('.button_next'), class: 'btn btn-outline-success awnswer_submit' %>
   </div>
 <% end %>
